module FileManager

	def load_data(source)
	end

	def save_data(destination, data)
	end
end

